benchmark/results/TEST-ROWS/9/df_pandas_executor/6000ROWS/RUN3/run.log
<<<<<<< HEAD
Traceback (most recent call last):
  File "/Users/eve/Desktop/S/6.5/forms/benchmark/test_driver.py", line 8, in <module>
    import forms as fs
  File "/Users/eve/Desktop/S/6.5/forms/forms/__init__.py", line 17, in <module>
    from forms.core.forms import compute_formula, config, print_spreadsheet_view
  File "/Users/eve/Desktop/S/6.5/forms/forms/core/forms.py", line 27, in <module>
    from forms.utils.executors import create_executor_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/utils/executors.py", line 16, in <module>
    from forms.executor.dfexecutor.planexecutor import DFPlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/planexecutor.py", line 24, in <module>
    from forms.executor.planexecutor import PlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/planexecutor.py", line 21, in <module>
    from forms.scheduler.utils import create_scheduler_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/utils.py", line 19, in <module>
    from forms.scheduler.dfscheduler.dfscheduler import DFSimpleScheduler, PrioritizedScheduler
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/dfscheduler.py", line 20, in <module>
    from forms.scheduler.dfscheduler.phase import create_phase_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/phase.py", line 21, in <module>
    from forms.executor.dfexecutor.utils import remote_access_planning
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/utils.py", line 229
    start_idx =
               ^
SyntaxError: invalid syntax
=======
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
Distributing data time: 0.6497752666473389
submit_one_func 0.23614192008972168
submit_one_func 0.0006220340728759766
submit_one_func 0.0013461112976074219
submit_one_func 0.0005221366882324219
submit_one_func 0.0005309581756591797
submit_one_func 0.0005331039428710938
submit_one_func 0.0005800724029541016
submit_one_func 0.0005702972412109375
submit_one_func 0.0006227493286132812
submit_one_func 0.003017902374267578
submit_one_func 0.0006339550018310547
submit_one_func 0.002302885055541992
Execution time: 0.9244520664215088
Get table content time: 0.03594613075256348
Get table content time: 0.43940210342407227
Get table content time: 0.171644926071167
Get table content time: 0.37556934356689453
Get table content time: 0.17127490043640137
Get table content time: 0.19189786911010742
Get table content time: 0.3338031768798828
Get table content time: 0.17087507247924805
Get table content time: 0.1697218418121338
Get table content time: 0.36451292037963867
Get table content time: 0.3278181552886963
Get table content time: 0.16624879837036133
Get table content time: 0.17077302932739258
>>>>>>> df919a2c2abd8825d2dfa1628ca8da49051bf6c3
